[gd_scene load_steps=4 format=3 uid="uid://dg82idvwoxp7b"]

[ext_resource type="Script" path="res://ui/settings_menu/audio_control.gd" id="1_61uf7"]
[ext_resource type="Texture2D" uid="uid://cw1yk2k0hd3l8" path="res://ui/icons/volume-muted-icon.png" id="2_53chv"]
[ext_resource type="Texture2D" uid="uid://beyji740537jj" path="res://ui/icons/volume-full-icon.png" id="3_gb74a"]

[node name="AudioControl" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = 23.0
offset_right = 107.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61uf7")

[node name="AudioBusLabel" type="Label" parent="."]
layout_mode = 2

[node name="Volume" type="HSlider" parent="."]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="VolumeToggle" type="CheckButton" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
mouse_default_cursor_shape = 4
theme_override_icons/checked = ExtResource("2_53chv")
theme_override_icons/unchecked = ExtResource("3_gb74a")

[connection signal="value_changed" from="Volume" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="VolumeToggle" to="." method="_on_volume_switch_toggled"]
